# pytest_example

./: README.md  pyproject.toml  pytest.ini  requeriments.txt
Pytest_topics/: first_prog.py  test_markers.py  test_module01.py  test_module02.py  test_skiptests.py  test_xfail.py
