[tool.poetry]
name = "pipfile"
version = "0.1.0"
description = "Udemy course of pytest"
authors = ["Lapetina <victor.lrs95@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
ipython = "^8.1.1"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
